--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,6 @@ cython_debug/
 /Python Sample/fatsever/files
 /Python Sample/fatsever/img
 /Python Sample/fatsever/video
+Python Sample/fatsever/files
+Python Sample/fatsever/img
+Python Sample/fatsever/video
