--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ cython_debug/
 Python Sample/fatsever/files
 Python Sample/fatsever/img
 Python Sample/fatsever/video
+Python Sample/fatsever/files/tmp
+Python Sample/fatsever/files/tmp
+Python Sample/fatsever/video/tmp
