更新依賴項，新增資料庫設定與非同步資料庫連接；新增首頁與狀態頁面模板，並改善前端樣式

--- a/Python Sample/fatsever/requirements.txt
+++ b/Python Sample/fatsever/requirements.txt
@@ -2,9 +2,12 @@ fastapi
 uvicorn
 python-dotenv
 validators
-sqlalchemy
+sqlalchemy>=2.0.0
+psycopg2-binary
+asyncpg
 python-magic
 python-magic-bin
 Pillow
 sse-starlette
 yt-dlp
+pydantic-settings
