新增 YouTube 相關的 cookie 檔案至 .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@ Python Sample/fatsever/video
 Python Sample/fatsever/files/tmp
 Python Sample/fatsever/files/tmp
 Python Sample/fatsever/video/tmp
+Python Sample/fatsever/youtube.com_cookies.txt
