--- a/Js Tip/chrom extensions/reader-focus-extension/manifest.json
+++ b/Js Tip/chrom extensions/reader-focus-extension/manifest.json
@@ -19,8 +19,13 @@
   "permissions": [
     "activeTab",
     "storage",
-    "scripting"
+    "scripting",
+    "contextMenus",
+    "clipboardWrite"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
