refactor(extension): 移除不必要的 Turndown 載入，簡化訊息回應邏輯

--- a/Js Tip/chrom extensions/reader-focus-extension/manifest.json
+++ b/Js Tip/chrom extensions/reader-focus-extension/manifest.json
@@ -30,6 +30,7 @@
     {
       "matches": ["<all_urls>"],
       "js": [
+        "turndown.js",
         "focusable-selectors.js",
         "ui.js",
         "focus-mode.js",
