feat(extension): 新增文字與眼睛序列轉換功能，並加入大檔案上傳測試頁面

--- a/Python Sample/fatsever/DOCKERFILE
+++ b/Python Sample/fatsever/DOCKERFILE
@@ -79,7 +79,10 @@ RUN python3 -m pip install --upgrade pip setuptools && \
         aiortc \
         fastapi-sse \
         discord.py \
-        aiofiles
+        aiofiles \
+        pyannote.audio \
+        opencc-python-reimplemented
+
 
 RUN update-ca-certificates
 RUN python3 -m pip install torch torchvision torchaudio
