更新 .gitignore 以排除瀏覽器擴充套件的大檔案
- 新增對瀏覽器擴充套件資料夾中大檔案的忽略規則
- 包含 .dat、.woff、.woff2、.png、.gif、.jpg、.jpeg、.svg、.ttf、.eot 檔案
- 防止推送大檔案到 GitHub 導致的錯誤

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,25 @@ Python Sample/fatsever/files/tmp
 Python Sample/fatsever/files/tmp
 Python Sample/fatsever/video/tmp
 Python Sample/fatsever/youtube.com_cookies.txt
+
+# 瀏覽器擴充套件的大檔案
+Js Tip/chrom extensions/**/*.dat
+Js Tip/chrom extensions/**/*.woff
+Js Tip/chrom extensions/**/*.woff2
+Js Tip/chrom extensions/**/*.png
+Js Tip/chrom extensions/**/*.gif
+Js Tip/chrom extensions/**/*.jpg
+Js Tip/chrom extensions/**/*.jpeg
+Js Tip/chrom extensions/**/*.svg
+Js Tip/chrom extensions/**/*.ttf
+Js Tip/chrom extensions/**/*.eot
+
+# IDE 設定檔案
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 作業系統生成的檔案
+.DS_Store
+Thumbs.db
