feat(docker): 新增 Docker Compose 檔案以支援 code-server 服務，並更新 Dockerfile 以改善 VNC 伺服器設定和解析度調整功能

--- a/docker_file/webtop/Dockerfile
+++ b/docker_file/webtop/Dockerfile
@@ -13,12 +13,18 @@ RUN apt-get update && apt-get install -y \
     xfce4 xfce4-goodies xorg dbus-x11 x11-xserver-utils \
     # TigerVNC 伺服器、noVNC以及相關工具
     tigervnc-standalone-server novnc python3-websockify python3-numpy \
+    # 安裝 xrandr 和 xvfb 用於動態解析度調整
+    x11-xserver-utils xvfb \
+    # 安裝 cvt 工具用於計算解析度模式
+    xserver-xorg-video-dummy \
     # 終端機模擬器
     xfce4-terminal gnome-terminal \
     # 剪貼簿工具
     xclip xsel \
     # 實用工具
     sudo curl wget gnupg apt-transport-https openssl \
+    # 安裝 D-Bus 和語言套件
+    dbus-x11 locales \
     # 瀏覽器：安裝Google Chrome（透過官方deb）和Brave Browser（透過官方APT來源）
     && wget -O /tmp/chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
     && apt-get install -y /tmp/chrome.deb \
@@ -50,6 +56,11 @@ RUN apt-get update && apt-get install -y \
     # 清理APT暫存
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# 設定語言環境
+RUN locale-gen en_US.UTF-8
+ENV LANG=en_US.UTF-8
+ENV LC_ALL=en_US.UTF-8
+
 # --- 建立非root使用者並設定權限 ---
 # 建立一個普通使用者 (abc)，UID和GID使用建置參數（預設1000），並加入sudo組。
 ARG PUID=1000
@@ -77,8 +88,15 @@ USER abc
 ENV DISPLAY=:1
 ENV ELECTRON_DISABLE_SECURITY_WARNINGS=true
 ENV ELECTRON_ENABLE_LOGGING=true
-RUN mkdir -p /home/abc/.vnc && echo -e "#!/bin/sh\nunset SESSION_MANAGER\nunset DBUS_SESSION_BUS_ADDRESS\n# 設定環境變數\nexport DISPLAY=:1\nexport ELECTRON_DISABLE_SECURITY_WARNINGS=true\n# 啟動 XFCE 桌面環境\nstartxfce4 &\n# 等待桌面啟動\nsleep 3\n# 確保面板正常啟動\nDISPLAY=:1 xfce4-panel &\n# 保持腳本運行\nwait" > /home/abc/.vnc/xstartup && \
+RUN mkdir -p /home/abc/.vnc && echo -e "#!/bin/bash\nunset SESSION_MANAGER\nunset DBUS_SESSION_BUS_ADDRESS\n# 設定基本環境變數\nexport DISPLAY=:1\nexport ELECTRON_DISABLE_SECURITY_WARNINGS=true\nexport ELECTRON_ENABLE_LOGGING=true\n# 設定語言環境\nexport LANG=en_US.UTF-8\nexport LC_ALL=en_US.UTF-8\n# 設定 PATH 確保終端機可以找到指令\nexport PATH=/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/sbin\n# 設定 SHELL 環境\nexport SHELL=/bin/bash\n# 啟動 D-Bus 服務\neval \`dbus-launch --sh-syntax\`\n# 啟動 XFCE 桌面環境\nstartxfce4 &\n# 等待桌面啟動\nsleep 3\n# 確保面板正常啟動\nDISPLAY=:1 xfce4-panel &\n# 保持腳本運行\nwait" > /home/abc/.vnc/xstartup && \
     chmod +x /home/abc/.vnc/xstartup
+
+# 建立 VNC 配置檔案以支援動態解析度
+RUN echo -e "# VNC 伺服器配置\n# 允許動態調整解析度\n# 支援範圍從 640x480 到 4096x4096\ngeometry=1024x768\ndpi=96\ndesktopname=VNC Desktop\nvncEncoding=Tight\nrandr=auto\nvirtualDesktop=1" > /home/abc/.vnc/config
+
+# 建立自訂的 noVNC 設定以支援自動縮放
+RUN mkdir -p /home/abc/.novnc && \
+    echo '{\n  "scale": true,\n  "resize": "remote",\n  "clipboard": true,\n  "view_only": false,\n  "path": "websockify",\n  "repeaterID": "",\n  "shared": true\n}' > /home/abc/.novnc/default_settings.json
 
 # 建立 XFCE 自動啟動目錄和應用程式
 RUN mkdir -p /home/abc/.config/autostart && \
@@ -86,17 +104,22 @@ RUN mkdir -p /home/abc/.config/autostart && \
 
 # 建立桌面快捷方式（可執行）
 RUN mkdir -p /home/abc/Desktop && \
-    echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=Visual Studio Code\nComment=Code Editor\nExec=code --no-sandbox --disable-dev-shm-usage --disable-gpu --disable-software-rasterizer\nIcon=code\nTerminal=false\nStartupNotify=true\nCategories=Development;\nStartupWMClass=Code" > /home/abc/Desktop/VSCode.desktop && \
+    echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=Visual Studio Code\nComment=Code Editor\nExec=env DISPLAY=:1 code --no-sandbox --disable-dev-shm-usage --disable-web-security\nIcon=code\nTerminal=false\nStartupNotify=true\nCategories=Development;\nStartupWMClass=Code" > /home/abc/Desktop/VSCode.desktop && \
     echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=Brave Browser\nComment=Web Browser\nExec=brave-browser --no-sandbox --disable-dev-shm-usage\nIcon=brave-browser\nTerminal=false\nStartupNotify=true\nCategories=Network;\nStartupWMClass=Brave" > /home/abc/Desktop/Brave.desktop && \
     echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=Google Chrome\nComment=Web Browser\nExec=google-chrome --no-sandbox --disable-dev-shm-usage\nIcon=google-chrome\nTerminal=false\nStartupNotify=true\nCategories=Network;\nStartupWMClass=Google-chrome" > /home/abc/Desktop/Chrome.desktop && \
-    echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=Terminal\nComment=Terminal Emulator\nExec=gnome-terminal\nIcon=utilities-terminal\nTerminal=false\nStartupNotify=true\nCategories=System;\nStartupWMClass=Gnome-terminal" > /home/abc/Desktop/Terminal.desktop && \
-    echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=XFCE Terminal\nComment=XFCE Terminal Emulator\nExec=xfce4-terminal\nIcon=utilities-terminal\nTerminal=false\nStartupNotify=true\nCategories=System;\nStartupWMClass=Xfce4-terminal" > /home/abc/Desktop/XfceTerminal.desktop && \
+    echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=Terminal\nComment=Terminal Emulator\nExec=env DISPLAY=:1 gnome-terminal\nIcon=utilities-terminal\nTerminal=false\nStartupNotify=true\nCategories=System;\nStartupWMClass=Gnome-terminal" > /home/abc/Desktop/Terminal.desktop && \
+    echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=XFCE Terminal\nComment=XFCE Terminal Emulator\nExec=env DISPLAY=:1 xfce4-terminal\nIcon=utilities-terminal\nTerminal=false\nStartupNotify=true\nCategories=System;\nStartupWMClass=Xfce4-terminal" > /home/abc/Desktop/XfceTerminal.desktop && \
     echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=File Manager\nComment=File Manager\nExec=thunar\nIcon=file-manager\nTerminal=false\nStartupNotify=true\nCategories=System;\nStartupWMClass=Thunar" > /home/abc/Desktop/FileManager.desktop && \
+    echo -e "[Desktop Entry]\nVersion=1.0\nType=Application\nName=解析度調整\nComment=VNC Resolution Adjuster\nExec=xfce4-terminal -e 'bash -c \"echo 當前解析度設定:; xrandr | head -2; echo; echo 常用解析度調整:; echo 1. 調整為 1920x1080: xrandr --output VNC-0 --mode 1920x1080; echo 2. 調整為 1280x720: xrandr --output VNC-0 --mode 1280x720; echo 3. 調整為 1024x768: xrandr --output VNC-0 --mode 1024x768; echo; read -p 請選擇解析度 [1-3]: choice; case \\$choice in 1) xrandr --output VNC-0 --mode 1920x1080;; 2) xrandr --output VNC-0 --mode 1280x720;; 3) xrandr --output VNC-0 --mode 1024x768;; esac; echo 解析度已調整; sleep 2\"'\nIcon=preferences-desktop-display\nTerminal=false\nStartupNotify=true\nCategories=System;" > /home/abc/Desktop/Resolution.desktop && \
     chmod +x /home/abc/Desktop/*.desktop
 
 # 建立面板重新啟動腳本
 RUN echo -e "#!/bin/bash\nkillall xfce4-panel 2>/dev/null\nsleep 1\nDISPLAY=:1 xfce4-panel &" > /home/abc/restart-panel.sh && \
     chmod +x /home/abc/restart-panel.sh
+
+# 建立動態解析度調整腳本
+RUN echo -e "#!/bin/bash\n# 動態解析度調整腳本\n# 提供手動調整解析度的功能\n\n# 設定預設解析度\nDEFAULT_WIDTH=1024\nDEFAULT_HEIGHT=768\n\n# 如果有環境變數，使用環境變數的值\nWIDTH=\${VNC_WIDTH:-\$DEFAULT_WIDTH}\nHEIGHT=\${VNC_HEIGHT:-\$DEFAULT_HEIGHT}\n\necho \"設定 VNC 解析度為: \${WIDTH}x\${HEIGHT}\"\n\n# 等待 VNC 伺服器完全啟動\nsleep 5\n\n# 使用 xrandr 新增和設定自訂解析度\nDISPLAY=:1 xrandr --newmode \"\${WIDTH}x\${HEIGHT}\" \$(cvt \$WIDTH \$HEIGHT | grep Modeline | sed 's/Modeline //' | sed 's/\"//g') 2>/dev/null || true\nDISPLAY=:1 xrandr --addmode VNC-0 \"\${WIDTH}x\${HEIGHT}\" 2>/dev/null || true\nDISPLAY=:1 xrandr --output VNC-0 --mode \"\${WIDTH}x\${HEIGHT}\" 2>/dev/null || true\n\necho \"解析度調整完成\"" > /home/abc/resize-monitor.sh && \
+    chmod +x /home/abc/resize-monitor.sh
 
 # 設定 XFCE 預設設定
 RUN mkdir -p /home/abc/.config/xfce4/xfconf/xfce-perchannel-xml && \
@@ -104,7 +127,7 @@ RUN mkdir -p /home/abc/.config/xfce4/xfconf/xfce-perchannel-xml && \
 
 # --- 建立 VSCode 設定檔案 ---
 RUN mkdir -p /home/abc/.config/Code/User && \
-    echo -e '{\n  "extensions.autoCheckUpdates": false,\n  "extensions.autoUpdate": false,\n  "telemetry.telemetryLevel": "off",\n  "update.mode": "none",\n  "security.workspace.trust.enabled": false,\n  "workbench.startupEditor": "welcomePage",\n  "git.enableSmartCommit": true,\n  "git.confirmSync": false,\n  "terminal.integrated.defaultProfile.linux": "bash"\n}' > /home/abc/.config/Code/User/settings.json
+    echo -e '{\n  "extensions.autoCheckUpdates": false,\n  "extensions.autoUpdate": false,\n  "telemetry.telemetryLevel": "off",\n  "update.mode": "none",\n  "security.workspace.trust.enabled": false,\n  "workbench.startupEditor": "welcomePage",\n  "git.enableSmartCommit": true,\n  "git.confirmSync": false,\n  "terminal.integrated.defaultProfile.linux": "bash",\n  "terminal.integrated.shell.linux": "/bin/bash",\n  "terminal.integrated.shellArgs.linux": ["-l"],\n  "terminal.integrated.env.linux": {\n    "DISPLAY": ":1",\n    "LANG": "en_US.UTF-8",\n    "LC_ALL": "en_US.UTF-8"\n  }\n}' > /home/abc/.config/Code/User/settings.json
 
 # --- 更新字體快取 ---
 RUN fc-cache -fv
@@ -114,6 +137,6 @@ RUN mkdir -p /home/abc/.config/fontconfig && \
     echo -e '<?xml version="1.0"?>\n<!DOCTYPE fontconfig SYSTEM "fonts.dtd">\n<fontconfig>\n  <alias>\n    <family>sans-serif</family>\n    <prefer>\n      <family>Noto Sans</family>\n      <family>Noto Color Emoji</family>\n      <family>Font Awesome 5 Free</family>\n    </prefer>\n  </alias>\n  <alias>\n    <family>monospace</family>\n    <prefer>\n      <family>Noto Sans Mono</family>\n      <family>Noto Color Emoji</family>\n    </prefer>\n  </alias>\n</fontconfig>' > /home/abc/.config/fontconfig/fonts.conf
 
 # --- 啟動容器時執行 VNC 伺服器與 noVNC ---
-# 使用 supervisord/s6 等管理多進程是更正規的方法，但此處用簡單方法在前景啟動websockify。
+# 啟動 VNC 伺服器，讓 noVNC 客戶端自動適應瀏覽器視窗大小
 USER abc
-CMD bash -c "vncserver :1 -depth 24 -SecurityTypes None & websockify --web=/usr/share/novnc/ --cert=/home/abc/novnc.pem 3001 localhost:5901 -- /?resize=scale&clipboard=1"
+CMD bash -c "vncserver :1 -depth 24 -SecurityTypes None -AcceptCutText=0 -SendCutText=0 && sleep 2 && websockify --web=/usr/share/novnc/ --cert=/home/abc/novnc.pem 3001 localhost:5901"
